# result-preview

./: .replit  README.md  Readme.md  main.py  pyproject.toml  python-publish.yml  render.yml  requirements.txt
.github/workflows/: deploy.yml  python-publish.yml
attached_assets/: Pasted--Bayern-M-nchen-MHP-RIESEN-Ludwigsburg-Veolia-Towers-Ha_1775227218327.txt
data/: games.py  state.json
models/: team.py  team_stats.py
result_preview/: main.py
result_preview/data/: consts.py  games.py  persistence.py  state.json  state_Maxi.json  state_Sassi.json  state_mebertk9.json  users.py
result_preview/data/util/: add_user.py  rettungsgasse.py  rettungsgasse_mockup.html
result_preview/models/: team_stats.py
result_preview/static/: constants.py  rettungsgasse.js
result_preview/templates/: index.html  login.html  nils_gate.html  rettungsgasse_ambulance_moving.html
templates/: index.html
