[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "result-preview"
version = "0.1.0"
description = "A Python web application for result preview"
authors = [
    {name = "Matthias Ebert", email = "mahjongskroenung@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["result_preview"]
