[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbl-standings"
version = "0.1.0"
description = "BBL-Tabellenkalkulator – Ergebnisse eintragen und Tabellen live simulieren"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "Matthias Ebert", email = "mahjongskroenung@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
]
keywords = ["basketball", "bbl", "standings", "simulator", "flask"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[project.urls]
Homepage = "https://github.com/mahjongskroenung/bbl-standings"

[project.scripts]
bbl-standings = "result_preview.main:app.run"

[tool.hatch.build.targets.wheel]
packages = ["result_preview"]
